--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   build:
@@ -12,9 +9,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
+      
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+       node-version: '14'
+       
     - name: Install dependencies
-      run: npm install
+      run: |
+       pwd 
+       npm install
 
     - name: Run tests
       run: npm test
